--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "install": "node install.js",
     "start": "gulp serve",
     "build": "gulp build --production",
-    "template": "node node_modules/sa-template-1/install.js",
     "module": "node node_modules/sa-template-1/module.js"
   },
   "dependencies": {
@@ -38,38 +37,15 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-transform-object-assign": "^7.0.0",
-    "@babel/preset-env": "^7.2.3",
-    "autoprefixer": "^9.4.3",
-    "babelify": "^10.0.0",
-    "browser-sync": "^2.23.6",
-    "browserify": "^16.2.2",
-    "del": "^3.0.0",
-    "emitty": "^1.4.0",
-    "glob": "^7.1.2",
-    "gulp": "^4.0.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-pug": "^4.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprites": "^4.1.2",
-    "gulp-svgo": "^1.5.4",
-    "gulp-uglify": "^3.0.1",
-    "gulp-watch": "^5.0.0",
-    "imagemin-pngquant": "^6.0.0",
-    "node-sass": "^4.11.0",
-    "sa-template-1": "^3.1.1",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "sa-template-1": "^3.3.2"
   },
   "config": {
+    "devServer": {
+      "secure": true,
+      "host": "localhost",
+      "open": false,
+      "port": "3000"
+    },
     "entries": {
       "css": [
         "main"
