--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "install": "node install.js",
     "start": "gulp serve",
     "build": "gulp build --production",
-    "module": "node node_modules/sa-template-1/module.js"
+    "module": "node node_modules/sa-template-1/module.js",
+    "lint-css": "stylelint src/**/*.scss -f verbose --fix"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
@@ -37,7 +38,7 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "sa-template-1": "^3.3.2"
+    "sa-template-1": "^3.4.1"
   },
   "config": {
     "devServer": {
