--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start": "gulp serve",
     "build": "gulp build --production",
     "module": "node node_modules/sa-template-1/module.js",
-    "lint-css": "stylelint src/**/*.scss -f verbose --fix"
+    "lint-css": "stylelint src/**/*.scss -f verbose --fix",
+    "lint-js": "eslint src/**/*.js --fix"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
@@ -38,7 +39,7 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "sa-template-1": "^3.4.2"
+    "sa-template-1": "^3.5.5"
   },
   "config": {
     "devServer": {
