--- a/package.json
+++ b/package.json
@@ -35,15 +35,17 @@
     "@babel/polyfill": "^7.2.5",
     "body-scroll-lock": "^2.6.1",
     "bootstrap": "^4.2.1",
+    "css-vars-ponyfill": "^1.17.2",
     "ncp": "^2.0.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "sa-polyfills": "^1.1.2"
   },
   "devDependencies": {
     "sa-template-1": "^3.6.2"
   },
   "config": {
     "devServer": {
-      "secure": true,
+      "secure": false,
       "host": "localhost",
       "open": false,
       "port": "3000"
